# BevyAiWolfenstein

./: .gitignore  Cargo.toml  LICENSE  README.en.md  README.ja.md  README.md  README.zh.md
assets/: level_plan.yaml
assets/audio/: README_CC0.txt
assets/textures/: README_CC0.txt
crates/harness/: Cargo.toml
crates/harness/src/: lib.rs
crates/hermes/: Cargo.toml
crates/hermes/src/: lib.rs
docs/: ABOUT.en.md  ABOUT.ja.md  ABOUT.zh.md  AI-FPS-DEMO-PROMPTS.md
src/: main.rs
